# workbench

./: Cargo.toml  README.md  TODO.md  install.sh  workbench.yml
.github/workflows/: ci.yml  release.yml
crates/wb/: Cargo.toml  workbench.yml
crates/wb/src/: builtin.rs  cli.rs  config.rs  console.rs  error.rs  exec.rs  main.rs
crates/wb/src/builtin/: task_ls.rs
crates/wb/src/cli/: parse.rs  parse_args.rs  split_args.rs  task_args.rs  workbench_args.rs
crates/wb/src/config/: domain.rs  load.rs
crates/wb/src/console/: log.rs  progress.rs
crates/wb/src/exec/: errors.rs  files.rs  handlers.rs  shell.rs  task_context.rs  task_path.rs
docs/: build-from-source.md  workbench-config-spec.md
