[package]
name = "wb"
version = "0.1.0"
edition = "2021"
description = "Workbench task runner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
lazy_static = "1.4.0"
regex = "1.10.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-macros = "2.2.0"
