[package]
name = "wb"
version = "0.1.7"
edition = "2021"
description = "Workbench task runner"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
duct = "0.13.7"
futures = "0.3.30"
glob = "0.3.1"
indicatif = "0.17.8"
lazy_static = "1.4.0"
regex = "1.10.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_yaml = "0.9.34"
shell-quote = "0.5.0"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-macros = "2.2.0"

[dev-dependencies]
mockall = "0.12.1"
tempfile = "3.10.1"
